# quadsv

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst
docs/guides/: faq.rst  installation.rst  kernels.rst  multisample.rst  quickstart.rst  scaling.rst  theory.rst
src/quadsv/: __init__.py  _rasterize.py  api.py  statistics.py  utils.py
src/quadsv/comparators/: __init__.py  base.py  features.py  grid.py  irregular.py  multisample.py  normalization.py
src/quadsv/detectors/: __init__.py  base.py  grid.py  irregular.py
src/quadsv/kernels/: __init__.py  base.py  fft.py  matrix.py  nufft.py
tests/: __init__.py  test_api_factory.py  test_comparators.py  test_detector.py  test_detector_grid.py  test_features.py  test_fft.py  test_io_visium.py  test_kernels.py  test_multisample.py  test_normalization.py  test_nufft.py  test_public_api.py  test_rasterize.py  test_statistics.py  test_tutorials.py  test_utils.py
